r36 (25. 11. 2021):
Improved formatting of Money achievement tracker
Mallcrasher: Fixed an issue where achievement counter for "$1.8M Speedrun" was not counting

r35 (24. 11. 2021):
Added option "Show XP difference"
Added option "Show Waypoints for Looped Cameras"
Made improvements to units used in-game so they will work also on custom maps
Fixed an issue where stealth trackers were visible in loud gameplay when a client dropped-in
Fixed an issue where a tracker could be not visible entirely and a small part of the tracker is visible
Santa's Workshop: Fixed an issue where Safe Timer was not visible

r34 (26. 10. 2021):
Fixed a possible log spam with some specific mods
Fixed a crash when the game returned "nil" value for Arbiter ammo
Border Crossing: Fixed an issue where fueling timer reset in stealth
Cook Off: Fixed an issue where the first Van arrival was not accurate
Shacklethorne Auction: Fixed an issue where Heli timer was not visible
Menu: Fixed a visual issue with the preview when "Tracker Alignment" was set to "Horizontal"

r33 (17. 10. 2021):
Improved detection of drill/saw autorestart on client - the unit must autorestart first
Fixed a crash while using a sniper rifle with Graze skill

r32 (16. 10. 2021):
Heat Street: Fixed a crash at "Light the van on fire!" objective

r31 (15. 10. 2021):
Added tracker for achievements "For all you legends", "Buzzbomb" and "Cloaker Charmer"
Achievement "Master of Floatation" is now disabled in loud as per Hotfix 212.1

r30 (14. 10. 2021):
Added trackers for Black Cat Heist
Added "Tracker Alignment" option
Added a lot of achievement tracking (mostly weapon kills)
Fixed an issue where some trackers were not replaced correctly
Show Timers Tracker: Fixed an issue where upgrades were visible if the unit did not have any upgrades available
Firestarter Day 1: Added tracker for achievement "Lord of War"
Transport: Downtown: Fixed a crash when civilian died